--- a/src/blocks/popup/__form/_type/popup__form_type_avatar.css
+++ b/src/blocks/popup/__form/_type/popup__form_type_avatar.css
@@ -1,4 +1,4 @@
-.popup__form_avatar {
+.popup__form_type_avatar {
     width: 430px;
     min-height: 272px;
     box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
@@ -7,7 +7,7 @@
 }
 
 @media (max-width: 645px) {
-    .popup__form_avatar {
+    .popup__form_type_avatar {
         width: 100%;
     }
 }
