--- a/src/index.css
+++ b/src/index.css
@@ -47,3 +47,8 @@
 @import url(./blocks/popup/__form/_type/popup__form_type_avatar.css);
 @import url(./blocks/profile/__avatar-container/profile__avatar-container.css);
 @import url(./blocks/profile/__avatar-edit-button/profile__avatar-edit-button.css);
+@import url(./blocks/sign-window/sign-window.css);
+@import url(./blocks/sign-window/__title/sign-window__title.css);
+@import url(./blocks/sign-window/__input/sign-window__input.css);
+@import url(./blocks/sign-window/__button/sign-window__button.css);
+@import url(./blocks/sign-window/__form/sign-window__form.css);
