--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -1,4 +1,7 @@
 .header {
+    display: flex;
+  justify-content: space-between;
+  align-items: center;
     max-width: 880px;
     margin: 45px auto 40px;
     padding-bottom: 41px;
